Fixed issue: nav footer overspill

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*=========
   Testing
 ===========*/
-/* * {
+* {
   outline: 1px dashed red;
-} */
+}
 
 /*=====================================
   Box-sizing | Initial margin padding
@@ -218,12 +218,32 @@ nav .right-items li {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
+  
   nav .left-items {
     flex-wrap: wrap;
   }
 
   nav .right-items {
     align-self: flex-start;
+  }
+}
+
+@media (max-width: 727px) {
+  nav {
+    flex-direction: column-reverse;
+  }
+  nav .right-items {
+    justify-content: space-between;
+    align-content: space-between;
+  }
+
+  .article-nav {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  footer {
+    flex-direction: column;
   }
 }
 
@@ -305,7 +325,9 @@ main {
 }
 
 article {
+  width: calc(100vw - 10vw);
   max-width: 42rem;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -410,12 +432,11 @@ article p {
   footer
 ==========*/
 footer {
-  height: 5.2rem;
+  padding: 2.6rem 0;
   background: black;
+  
   display: flex;
   align-items: center;
-
-  display: flex;
   justify-content: space-between;
 }
 
